Fix overflowing education box occuring on firefox

--- a/src/style.scss
+++ b/src/style.scss
@@ -222,11 +222,9 @@ section#education {
 
   .education-description {
     margin-right: 5pt;
-    // width: 220pt;
+    width: 60%;
   }
-  .education-themes {
-    width: 530px;
-  }
+
   .title-block {
     margin-bottom: 6pt;
   }
